@@ -66,7 +66,8 @@ Changes in version 0.2.0.1-alpha - 2007-??-??
     - Drop the old code to choke directory connections when the corresponding
       or connections got full: thanks to the cell queue feature, or conns
       don't get full any more.
-
+    - Make dns_resolve handle attaching connections to circuits properly,
+      so the caller doesn't have to.
 
 Changes in version 0.1.2.12-rc - 2007-03-16
   o Major bugfixes:
